Bug 256175 - REGRESSION (263335@main): Apple Pay is cancelled automatically
Summary: REGRESSION (263335@main): Apple Pay is cancelled automatically
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tim Horton
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-01 13:17 PDT by Tim Horton
Modified: 2023-05-01 14:54 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Horton 2023-05-01 13:17:57 PDT
REGRESSION (263335@main): Apple Pay is cancelled automatically
Comment 1 Tim Horton 2023-05-01 13:18:05 PDT
<rdar://problem/108745891>
Comment 2 Tim Horton 2023-05-01 13:19:40 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13335
Comment 3 EWS 2023-05-01 14:54:21 PDT
Committed 263560@main (1752fc362fb2): <https://commits.webkit.org/263560@main>

Reviewed commits have been landed. Closing PR #13335 and removing active labels.